# SmallRNApipeline

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
include/: CCD  CPT  link.sh  parallel_pool  pokemon  std_addon
include/.bak/: CCD  debug_utility  link.sh
include/AGO/algorithm/: analyzer_length_distribution_ForAgoSorting.hpp  analyzer_mirna_distribution_printer_ForAgoSorting.hpp  analyzer_policy_ForAgoSorting.hpp  data_parser.js  gene_type_analyzer.hpp  gene_type_analyzer_annobed.hpp  gene_type_analyzer_barplot.hpp  gene_type_analyzer_biotype.hpp  gene_type_analyzer_boxplot.hpp  gene_type_analyzer_boxplot_test.hpp  gene_type_analyzer_bubplot.hpp  gene_type_analyzer_counting.hpp  gene_type_analyzer_debug.hpp  gene_type_analyzer_declare.hpp  gene_type_analyzer_diffarm.hpp  gene_type_analyzer_diffbar.hpp  gene_type_analyzer_difference.hpp  gene_type_analyzer_differential.hpp  gene_type_analyzer_dotplot.hpp  gene_type_analyzer_eachtype.hpp  gene_type_analyzer_filtering.hpp  gene_type_analyzer_hete53p.hpp  gene_type_analyzer_hetergt.hpp  gene_type_analyzer_hisgram.hpp  gene_type_analyzer_lendist.hpp  gene_type_analyzer_mdtcpos.hpp  gene_type_analyzer_mirdist.hpp  gene_type_analyzer_quantile.hpp  gene_type_analyzer_ranking.hpp  gene_type_analyzer_rnafold.hpp  gene_type_analyzer_sa_plot.hpp  gene_type_analyzer_seedmap.hpp  gene_type_analyzer_seedpie.hpp  gene_type_analyzer_sqalign.hpp  gene_type_analyzer_taildot.hpp  gene_type_analyzer_tmm.hpp  heatmap_bubble_plot.js  (+15 more)
lib/: kent  link.sh  old_pokemon_lib
src/algorithm/: analyzer_ForAgoSorting.hpp  analyzer_lendist.hpp  analyzer_length_distribution_printer_ForAgoSorting.hpp  analyzer_mirdist.hpp  analyzer_mirna_distribution_ForAgoSorting.hpp  meta_analyzer.hpp  visualization.hpp
src/components/: aligner_tailor.hpp  analyzer.hpp  annotator.hpp  fastq_in.hpp  fastq_input.hpp  filter.hpp  meta_analyzer.hpp  sam_input.hpp  sam_to_bed.hpp  tailor_align.hpp  tailor_fasta_to_bed.hpp  tailor_fastq.hpp  tailor_fastq_to_bed.hpp  test.hpp  visualization.hpp
src/engine/: component.hpp  component_factory.hpp  data_pool.hpp
unit_test/aligner/: tailor.cpp
unit_test/annotator/: annotator.cpp
unit_test/data/: bdarchive.json  fasta2bed.json  fasta2sam.json  fastq2bed.json  fastq2sam.json
unit_test/format/: md_sam.cpp
(+48 files in other folders)
